fix spinner scrollbars

--- a/source/scss/paper-wasp-editor/_spinner.scss
+++ b/source/scss/paper-wasp-editor/_spinner.scss
@@ -1,4 +1,5 @@
 .paper-wasp-spinner-container {
+    overflow: hidden;
     text-align: center;
 }
 
